--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,12 @@ margin: 1.9em;
     line-height: 1em;
 }
 
+.lead{
+    font-size: 1.2em;
+    padding: 0;
+    margin: 0.7em 0;
+}
+
 /* -----Languages---- */
 
 .languages {
@@ -191,6 +197,59 @@ margin: 1.9em;
     transform: translateY(-5px);
 }
 
+/* ------Features------ */
+.docs-head,
+.featured-head{
+    background-color: var(--primary);
+    color: white;
+}
+
+ .md{
+    font-size: 2.7em;
+}
+
+.featured-head .container img{
+   width: 200px;
+   justify-self: flex-end;
+}
+
+.features-subhead img{
+    width: 300px;
+    justify-self: flex-end;
+}
+
+.features-main .grid-3 *:first-child{
+    grid-column: 1/span 3;
+    grid-row: 1;
+}
+.features-main .grid-3 *:nth-child(2){
+    grid-column: 1/span 2;
+    grid-row: 2/3;
+}
+
+.features-main .card{
+width: 100%;
+height: 100%;
+margin: 0.5em;
+}
+
+.features-main i{
+margin: 0.5em;
+}
+
+
+/* -------Docs------- */
+
+  .docs-head img{
+      width: 200px;
+      justify-self: flex-end;
+  }
+
+  .docs-main .grid{
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+  }
+
 
 /* -------Footer------ */
 
@@ -199,9 +258,13 @@ margin: 1.9em;
     color: white;
 }
 
+.footer nav a{
+    margin: 0.5em;
+}
+
 .social a{
     color: white;
-    margin: 0.5em;
+    margin: 0.2em;
     transition: 0.2s;
 }
 
@@ -211,14 +274,78 @@ margin: 1.9em;
 
 
 
+/* ------For Tablets and under----- */
+
+@media (max-width: 720px){
+    .showcase .showcase-text{
+        text-align: center;
+        margin: 2.5em auto;
+    }
+    
+    .showcase{
+        height: auto;
+    }
+
+    .showcase-form{
+        top: 2em;
+        height: 350px;
+        width: 250px;
+        justify-self: center;
+    }
+
+        .showcase-form .card{
+            padding: 1.5em;  
+            margin: auto;
+    }
+
+    .showcase .grid,
+    .cli .grid,
+    .cloud .grid,
+    .stats .grid,
+    .grid{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .cli .grid>*:first-child{
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+
+    .languages .flex{
+       flex-wrap: wrap;
+    }
+
+
+    .footer {
+        display: flex;
+    }
+
+    .footer .grid-3{
+        grid-template-columns: 1fr;
+    }
+
+}
 
 
 
+/* -------For mobile------ */
 
-
-
-
-
+@media(max-width: 500px){
+    .nav-bar .flex {
+        flex-direction: column;
+    }
+    .nav-bar .flex .nav-links{
+        background-color: rgba(4, 38, 90, 0.356);
+        height: 40px;
+        align-items: center;
+    }
+    .nav-bar .flex .nav-links li{
+        padding: 0.3em 0;
+    }
+    
+}
 
 
 
